    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===============================================================================
                               Release History
===============================================================================

2.7 to 2.7.1: (Jan. 26, 2009)

  * Fixed issue with sound not working in OpenGL video mode in Windows with
    ATI video hardware.

  * Fixed bug where volume wasn't being saved in 'Audio Settings' when
    started from the ROM launcher.

  * Fixed crash which sometimes occurred when viewing snapshots in the
    ROM Info viewer.

  * Allow setting window sizes for the ROM launcher and debugger to be larger
    than your desktop resolution.  Be careful with this feature, as switching
    to fullscreen mode may cause problems in such cases.

  * Made the ROM launcher filename filtering be case-insensitive.  This fixes
    a bug whereby ROMs with uppercase extensions were marked as invalid.

  * The location of EEPROM files used for AtariVox/Savekey emulation can
    now be changed with the '-eepromdir' commandline argument as well as
    in the UI.

  * Removed 'Emulation_HmoveBlanks' ROM property and associated UI item.
    You can no longer optionally turn off HMOVE blanking; it is always
    enabled when necessary.

-Have fun!


2.6.1 to 2.7: (Jan. 19, 2009)

  * Totally reworked the built-in UI to be font-sensitive and use higher-
    resolution fonts.  Stella now requires a minimum screen size of 640x480.
    If used in a resolution smaller than that, the fonts will be reduced
    accordingly.  Related to this, switching between software and OpenGL
    rendering now requires an application restart.

  * Added three different sized fonts (small, medium, large) which can be
    used in the ROM launcher.

  * Added ability to temporarily override ROM properties from the UI.  This
    is tied to a right mouse button context menu in the ROM launcher, and